Update team memeber, team project

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Halcyon Days - An Exclusive Freebie for Codrops by Peter Finlan.</title>
+    <title>FPO Team - Passion and Creative</title>
     <link href='http://fonts.googleapis.com/css?family=Varela+Round' rel='stylesheet' type='text/css'>
     <link href="css/bootstrap.min.css" rel="stylesheet">
     <link href="http://netdna.bootstrapcdn.com/font-awesome/4.1.0/css/font-awesome.min.css" rel="stylesheet">
@@ -48,13 +48,13 @@
               </div>
               <div class="row">
                 <div class="col-md-8 col-md-offset-2 text-center inner">
-                  <h1 class="animated fadeInDown">HALCYON<span>DAYS</span></h1>
-                  <p class="animated fadeInUp delay-05s">An exclusive HTML5/CSS3 freebie by Peter Finlan, for <em>Codrops</em></p>
+                  <h1 class="animated fadeInDown">FPO<span>TEAM</span></h1>
+                  <p class="animated fadeInUp delay-05s">Education solution team</p>
                 </div>
               </div>
               <div class="row">
                 <div class="col-md-6 col-md-offset-3 text-center">
-                  <a href="http://tympanus.net/codrops/?p=19439" class="learn-more-btn">Back to the article</a>
+                  <a href="#team" class="learn-more-btn">Who we are ? </a>
                 </div>
               </div>
             </div>
@@ -159,81 +159,40 @@
                     <div class="col-md-4 wp4">
                       <div class="overlay-effect effects clearfix">
                         <div class="img">
-                          <img src="img/portfolio-01.jpg" alt="Portfolio Item">
+                          <img src="img/sv5t.jpg" alt="Portfolio Item">
                           <div class="overlay">
                             <a href="#" class="expand"><i class="fa fa-search"></i><br>View More</a>
                             <a class="close-overlay hidden">x</a>
                           </div>
                         </div>
                       </div>
-                      <h2>Creative Minds</h2>
+                      <h2>SV5T Management system</h2>
                       <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nunc ultricies nulla non metus pulvinar imperdiet. Praesent non adipiscing libero.</p>
                     </div>
                     <div class="col-md-4 wp4 delay-05s">
                       <div class="overlay-effect effects clearfix">
                         <div class="img">
-                          <img src="img/portfolio-02.jpg" alt="Portfolio Item">
+                          <img src="img/childhub.jpg" alt="Portfolio Item">
                           <div class="overlay">
                             <a href="#" class="expand"><i class="fa fa-search"></i><br>View More</a>
                             <a class="close-overlay hidden">x</a>
                           </div>
                         </div>
                       </div>
-                      <h2>Creative Hearts</h2>
+                      <h2>ChildHub</h2>
                       <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nunc ultricies nulla non metus pulvinar imperdiet. Praesent non adipiscing libero.</p>
                     </div>
                     <div class="col-md-4 wp4 delay-1s">
                       <div class="overlay-effect effects clearfix">
                         <div class="img">
-                          <img src="img/portfolio-03.jpg" alt="Portfolio Item">
+                          <img src="img/pickup.jpg" alt="Portfolio Item">
                           <div class="overlay">
                             <a href="#" class="expand"><i class="fa fa-search"></i><br>View More</a>
                             <a class="close-overlay hidden">x</a>
                           </div>
                         </div>
                       </div>
-                      <h2>Creative Ideas</h2>
-                      <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nunc ultricies nulla non metus pulvinar imperdiet. Praesent non adipiscing libero.</p>
-                    </div>
-                  </li>
-                  <li>
-                    <div class="col-md-4 wp4">
-                      <div class="overlay-effect effects clearfix">
-                        <div class="img">
-                          <img src="img/portfolio-01.jpg" alt="Portfolio Item">
-                          <div class="overlay">
-                            <a href="#" class="expand"><i class="fa fa-search"></i><br>View More</a>
-                            <a class="close-overlay hidden">x</a>
-                          </div>
-                        </div>
-                      </div>
-                      <h2>Creative Minds</h2>
-                      <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nunc ultricies nulla non metus pulvinar imperdiet. Praesent non adipiscing libero.</p>
-                    </div>
-                    <div class="col-md-4 wp4 delay-05s">
-                      <div class="overlay-effect effects clearfix">
-                        <div class="img">
-                          <img src="img/portfolio-02.jpg" alt="Portfolio Item">
-                          <div class="overlay">
-                            <a href="#" class="expand"><i class="fa fa-search"></i><br>View More</a>
-                            <a class="close-overlay hidden">x</a>
-                          </div>
-                        </div>
-                      </div>
-                      <h2>Creative Hearts</h2>
-                      <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nunc ultricies nulla non metus pulvinar imperdiet. Praesent non adipiscing libero.</p>
-                    </div>
-                    <div class="col-md-4 wp4 delay-1s">
-                      <div class="overlay-effect effects clearfix">
-                        <div class="img">
-                          <img src="img/portfolio-03.jpg" alt="Portfolio Item">
-                          <div class="overlay">
-                            <a href="#" class="expand"><i class="fa fa-search"></i><br>View More</a>
-                            <a class="close-overlay hidden">x</a>
-                          </div>
-                        </div>
-                      </div>
-                      <h2>Creative Ideas</h2>
+                      <h2>PickUP</h2>
                       <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nunc ultricies nulla non metus pulvinar imperdiet. Praesent non adipiscing libero.</p>
                     </div>
                   </li>
@@ -255,17 +214,16 @@
           <div class="container">
             <div class="row">
               <div class="col-md-12">
-                <h1 class="arrow">We're a team that adore what we do</h1>
+                <h1 class="arrow">Nothing is impossible with our team</h1>
               </div>
             </div>
             <div class="row">
               <div class="team-wrapper">
                 <div id="teamSlider">
                   <ul class="slides">
-                    <li>
                       <div class="col-md-4 wp5">
-                        <img src="img/team-01.png" alt="Team Member">
-                        <h2>Jon Snow</h2>
+                        <img src="img/phuongdth.png" alt="Team Member">
+                        <h2>Phuong Duong</h2>
                         <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nunc ultricies nulla non metus pulvinar imperdiet. Praesent non adipiscing libero.</p>
                         <div class="social">
                           <ul class="social-buttons">
@@ -278,7 +236,7 @@
                       
                       <div class="col-md-4 wp5 delay-05s">
                         <img src="img/team-02.png" alt="Team Member">
-                        <h2>Cersei Lannister</h2>
+                        <h2>Binh Pham</h2>
                         <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nunc ultricies nulla non metus pulvinar imperdiet. Praesent non adipiscing libero.</p>
                         <div class="social">
                           <ul class="social-buttons">
@@ -290,7 +248,7 @@
                       </div>
                       <div class="col-md-4 wp5 delay-1s">
                         <img src="img/team-03.png" alt="Team Member">
-                        <h2>Jamie Lannister</h2>
+                        <h2>Cuong Pham</h2>
                         <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nunc ultricies nulla non metus pulvinar imperdiet. Praesent non adipiscing libero.</p>
                         <div class="social">
                           <ul class="social-buttons">
@@ -300,45 +258,34 @@
                           </ul>
                         </div>
                       </div>
-                    </li>
-                    <li>
-                      <div class="col-md-4 wp5">
-                        <img src="img/team-01.png" alt="Team Member">
-                        <h2>Jon Snow</h2>
-                        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nunc ultricies nulla non metus pulvinar imperdiet. Praesent non adipiscing libero.</p>
-                        <div class="social">
-                          <ul class="social-buttons">
-                            <li><a href="#" class="social-btn"><i class="fa fa-dribbble"></i></a></li>
-                            <li><a href="#" class="social-btn"><i class="fa fa-twitter"></i></a></li>
-                            <li><a href="#" class="social-btn"><i class="fa fa-envelope"></i></a></li>
-                          </ul>
+                      <div>
+                        <div class="col-md-4 wp5">
+                          <img src="img/toanpv.png" alt="Team Member">
+                          <h2>Toan Pham</h2>
+                          <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nunc ultricies nulla non metus pulvinar imperdiet. Praesent non
+                            adipiscing libero.</p>
+                          <div class="social">
+                            <ul class="social-buttons">
+                              <li><a href="#" class="social-btn"><i class="fa fa-dribbble"></i></a></li>
+                              <li><a href="#" class="social-btn"><i class="fa fa-twitter"></i></a></li>
+                              <li><a href="#" class="social-btn"><i class="fa fa-envelope"></i></a></li>
+                            </ul>
+                          </div>
+                        </div>
+                        <div class="col-md-4 wp5 delay-05s">
+                          <img src="img/dangnh.png" alt="Team Member">
+                          <h2>Dang Nguyen</h2>
+                          <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nunc ultricies nulla non metus pulvinar imperdiet. Praesent non
+                            adipiscing libero.</p>
+                          <div class="social">
+                            <ul class="social-buttons">
+                              <li><a href="#" class="social-btn"><i class="fa fa-dribbble"></i></a></li>
+                              <li><a href="#" class="social-btn"><i class="fa fa-twitter"></i></a></li>
+                              <li><a href="#" class="social-btn"><i class="fa fa-envelope"></i></a></li>
+                            </ul>
+                          </div>
                         </div>
                       </div>
-                      <div class="col-md-4 wp5 delay-05s">
-                        <img src="img/team-02.png" alt="Team Member">
-                        <h2>Cersei Lannister</h2>
-                        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nunc ultricies nulla non metus pulvinar imperdiet. Praesent non adipiscing libero.</p>
-                        <div class="social">
-                          <ul class="social-buttons">
-                            <li><a href="#" class="social-btn"><i class="fa fa-dribbble"></i></a></li>
-                            <li><a href="#" class="social-btn"><i class="fa fa-twitter"></i></a></li>
-                            <li><a href="#" class="social-btn"><i class="fa fa-envelope"></i></a></li>
-                          </ul>
-                        </div>
-                      </div>
-                      <div class="col-md-4 wp5 delay-1s">
-                        <img src="img/team-03.png" alt="Team Member">
-                        <h2>Jamie Lannister</h2>
-                        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nunc ultricies nulla non metus pulvinar imperdiet. Praesent non adipiscing libero.</p>
-                        <div class="social">
-                          <ul class="social-buttons">
-                            <li><a href="#" class="social-btn"><i class="fa fa-dribbble"></i></a></li>
-                            <li><a href="#" class="social-btn"><i class="fa fa-twitter"></i></a></li>
-                            <li><a href="#" class="social-btn"><i class="fa fa-envelope"></i></a></li>
-                          </ul>
-                        </div>
-                      </div>
-                    </li>
                   </ul>
                 </div>
               </div>
