Update team memeber

--- a/index.html
+++ b/index.html
@@ -235,7 +235,7 @@
                       </div>
                       
                       <div class="col-md-4 wp5 delay-05s">
-                        <img src="img/team-02.png" alt="Team Member">
+                        <img src="img/binhpv.png" alt="Team Member">
                         <h2>Binh Pham</h2>
                         <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nunc ultricies nulla non metus pulvinar imperdiet. Praesent non adipiscing libero.</p>
                         <div class="social">
@@ -247,7 +247,7 @@
                         </div>
                       </div>
                       <div class="col-md-4 wp5 delay-1s">
-                        <img src="img/team-03.png" alt="Team Member">
+                        <img src="img/cuongpn.png" alt="Team Member">
                         <h2>Cuong Pham</h2>
                         <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nunc ultricies nulla non metus pulvinar imperdiet. Praesent non adipiscing libero.</p>
                         <div class="social">
