Update contact and a little bit memebers profile

--- a/index.html
+++ b/index.html
@@ -213,7 +213,7 @@
           <div class="container">
             <div class="row">
               <div class="col-md-12">
-                <h1 class="arrow">Nothing is impossible with our team</h1>
+                <h1 class="arrow">our team</h1>
               </div>
             </div>
             <div class="row">
@@ -226,9 +226,9 @@
                         <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nunc ultricies nulla non metus pulvinar imperdiet. Praesent non adipiscing libero.</p>
                         <div class="social">
                           <ul class="social-buttons">
-                            <li><a href="#" class="social-btn"><i class="fa fa-dribbble"></i></a></li>
-                            <li><a href="#" class="social-btn"><i class="fa fa-twitter"></i></a></li>
-                            <li><a href="#" class="social-btn"><i class="fa fa-envelope"></i></a></li>
+                            <li><a href="https://www.facebook.com/duongtran.haphuong" class="social-btn"><i class="fa fa-facebook"></i></a></li>
+                            <li><a href="https://twitter.com/dthphuong94" class="social-btn"><i class="fa fa-twitter"></i></a></li>
+                            <li><a href="https://github.com/dthphuong" class="social-btn"><i class="fa fa-github"></i></a></li>
                           </ul>
                         </div>
                       </div>
@@ -239,9 +239,9 @@
                         <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nunc ultricies nulla non metus pulvinar imperdiet. Praesent non adipiscing libero.</p>
                         <div class="social">
                           <ul class="social-buttons">
-                            <li><a href="#" class="social-btn"><i class="fa fa-dribbble"></i></a></li>
+                            <li><a href="https://www.facebook.com/profile.php?id=100007875605035&fref=ts" class="social-btn"><i class="fa fa-facebook"></i></a></li>
                             <li><a href="#" class="social-btn"><i class="fa fa-twitter"></i></a></li>
-                            <li><a href="#" class="social-btn"><i class="fa fa-envelope"></i></a></li>
+                            <li><a href="#" class="social-btn"><i class="fa fa-github"></i></a></li>
                           </ul>
                         </div>
                       </div>
@@ -251,9 +251,9 @@
                         <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nunc ultricies nulla non metus pulvinar imperdiet. Praesent non adipiscing libero.</p>
                         <div class="social">
                           <ul class="social-buttons">
-                            <li><a href="#" class="social-btn"><i class="fa fa-dribbble"></i></a></li>
+                            <li><a href="https://www.facebook.com/handsomevip007" class="social-btn"><i class="fa fa-facebook"></i></a></li>
                             <li><a href="#" class="social-btn"><i class="fa fa-twitter"></i></a></li>
-                            <li><a href="#" class="social-btn"><i class="fa fa-envelope"></i></a></li>
+                            <li><a href="#" class="social-btn"><i class="fa fa-github"></i></a></li>
                           </ul>
                         </div>
                       </div>
@@ -265,9 +265,9 @@
                             adipiscing libero.</p>
                           <div class="social">
                             <ul class="social-buttons">
-                              <li><a href="#" class="social-btn"><i class="fa fa-dribbble"></i></a></li>
+                              <li><a href="https://www.facebook.com/phamvinhtoan3010" class="social-btn"><i class="fa fa-facebook"></i></a></li>
                               <li><a href="#" class="social-btn"><i class="fa fa-twitter"></i></a></li>
-                              <li><a href="#" class="social-btn"><i class="fa fa-envelope"></i></a></li>
+                              <li><a href="#" class="social-btn"><i class="fa fa-github"></i></a></li>
                             </ul>
                           </div>
                         </div>
@@ -278,9 +278,9 @@
                             adipiscing libero.</p>
                           <div class="social">
                             <ul class="social-buttons">
-                              <li><a href="#" class="social-btn"><i class="fa fa-dribbble"></i></a></li>
+                              <li><a href="https://www.facebook.com/profile.php?id=100004432086600&fref=ts" class="social-btn"><i class="fa fa-facebook"></i></a></li>
                               <li><a href="#" class="social-btn"><i class="fa fa-twitter"></i></a></li>
-                              <li><a href="#" class="social-btn"><i class="fa fa-envelope"></i></a></li>
+                              <li><a href="#" class="social-btn"><i class="fa fa-github"></i></a></li>
                             </ul>
                           </div>
                         </div>
@@ -291,6 +291,7 @@
             </div>
           </div>
         </section>
+
         <section class="subscribe text-center">
           <div class="container">
             <h1><i class="fa fa-paper-plane"></i><span>Subscribe to stay in the loop</span></h1>
@@ -300,56 +301,67 @@
             </form>
           </div>
         </section>
+
         <section class="dark-bg text-center section-padding contact-wrap" id="contact">
           <a href="#top" class="up-btn"><i class="fa fa-chevron-up"></i></a>
           <div class="container">
             <div class="row">
               <div class="col-md-12">
-                <h1 class="arrow">Drop us a line</h1>
+                <h1 class="arrow">Contact us</h1>
               </div>
             </div>
             <div class="row contact-details">
               <div class="col-md-4">
                 <div class="light-box box-hover">
                   <h2><i class="fa fa-map-marker"></i><span>Address</span></h2>
-                  <p>Level 6, 23 Pitt St, Sydney</p>
+                  <p><b>Faculty of Information Technology</b> <br/> (Block A - Room 301 - 302) <br/> Ho Chi Minh city University of Pedagogy</p>
                 </div>
               </div>
               <div class="col-md-4">
                 <div class="light-box box-hover">
                   <h2><i class="fa fa-mobile"></i><span>Phone</span></h2>
-                  <p>+61 9 211 3747</p>
+                  <p>
+                     <br/>
+                    +84 122 88 33 xxx (Mr. Phuong Duong)<br/>
+                    <br/>
+                  </p>
                 </div>
               </div>
               <div class="col-md-4">
                 <div class="light-box box-hover">
                   <h2><i class="fa fa-paper-plane"></i><span>Email</span></h2>
-                  <p><a href="#">hey@halcyondays.com</a></p>
+                  <p>
+                      <br/>
+                      <a href="mailto:phuongdth@fpo.vn">phuongdth@fpo.vn</a><br/>
+                      <br/>
+                  </p>
                 </div>
               </div>
             </div>
             <div class="row">
               <div class="col-md-12">
                 <ul class="social-buttons">
-                  <li><a href="#" class="social-btn"><i class="fa fa-dribbble"></i></a></li>
+                  <li><a href="#" class="social-btn"><i class="fa fa-facebook"></i></a></li>
                   <li><a href="#" class="social-btn"><i class="fa fa-twitter"></i></a></li>
-                  <li><a href="#" class="social-btn"><i class="fa fa-envelope"></i></a></li>
+                  <li><a href="#" class="social-btn"><i class="fa fa-github"></i></a></li>
                 </ul>
               </div>
             </div>
           </div>
         </section>
+
         <footer>
           <div class="container">
             <div class="row">
               <div class="col-md-6">
                 <ul class="legals">
-                  <li><a href="#">Terms &amp; Conditions</a></li>
-                  <li><a href="#">Legals</a></li>
+                  <!--<li><a href="#">Terms &amp; Conditions</a></li>-->
+                  <!--<li><a href="#">Legals</a></li>-->
+                  <p>Design &amp; Develop by <a href="https://fpo-team.github.io/">FPO Team</a></p>
                 </ul>
               </div>
               <div class="col-md-6 credit">
-                <p>Designed &amp; Developed by <a href="http://www.peterfinlan.com/">Peter Finlan</a> exclusively for <a href="http://tympanus.net/codrops/"><em>Codrops</em></a></p>
+                <p>Source from <a href="http://www.peterfinlan.com/">Peter Finlan</a></p>
               </div>
             </div>
           </div>
