--- a/index.html
+++ b/index.html
@@ -152,6 +152,11 @@
         <section class="portfolio text-center section-padding" id="portfolio">
           <div class="container">
             <div class="row">
+              <div class="col-md-12">
+                <h1 class="arrow">our product</h1>
+              </div>
+            </div>
+            <div class="row">
               <div id="portfolioSlider">
                 <ul class="slides">
                   <li>
@@ -166,7 +171,7 @@
                         </div>
                       </div>
                       <h2>SV5T Management system</h2>
-                      <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nunc ultricies nulla non metus pulvinar imperdiet. Praesent non adipiscing libero.</p>
+                      <p>The system for management, tracking student of 5 metrics and improve Youth activities</p>
                     </div>
                     <div class="col-md-4 wp4 delay-05s">
                       <div class="overlay-effect effects clearfix">
@@ -179,7 +184,7 @@
                         </div>
                       </div>
                       <h2>ChildHub</h2>
-                      <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nunc ultricies nulla non metus pulvinar imperdiet. Praesent non adipiscing libero.</p>
+                      <p>The social network for the kindergarten with a lot of efficient features for teachers and parents to manage the childrens better</p>
                     </div>
                     <div class="col-md-4 wp4 delay-1s">
                       <div class="overlay-effect effects clearfix">
@@ -192,7 +197,7 @@
                         </div>
                       </div>
                       <h2>PickUP</h2>
-                      <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nunc ultricies nulla non metus pulvinar imperdiet. Praesent non adipiscing libero.</p>
+                      <p>The general system for creating and management the quiz for every school or university with a lot of types of question</p>
                     </div>
                   </li>
                 </ul>
@@ -226,9 +231,9 @@
                         <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nunc ultricies nulla non metus pulvinar imperdiet. Praesent non adipiscing libero.</p>
                         <div class="social">
                           <ul class="social-buttons">
-                            <li><a href="https://www.facebook.com/duongtran.haphuong" class="social-btn"><i class="fa fa-facebook"></i></a></li>
-                            <li><a href="https://twitter.com/dthphuong94" class="social-btn"><i class="fa fa-twitter"></i></a></li>
-                            <li><a href="https://github.com/dthphuong" class="social-btn"><i class="fa fa-github"></i></a></li>
+                            <li><a href="https://www.facebook.com/duongtran.haphuong" target="_blank" class="social-btn"><i class="fa fa-facebook"></i></a></li>
+                            <li><a href="https://twitter.com/dthphuong94" target="_blank" class="social-btn"><i class="fa fa-twitter"></i></a></li>
+                            <li><a href="https://github.com/dthphuong" target="_blank" class="social-btn"><i class="fa fa-github"></i></a></li>
                           </ul>
                         </div>
                       </div>
@@ -239,9 +244,9 @@
                         <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nunc ultricies nulla non metus pulvinar imperdiet. Praesent non adipiscing libero.</p>
                         <div class="social">
                           <ul class="social-buttons">
-                            <li><a href="https://www.facebook.com/profile.php?id=100007875605035&fref=ts" class="social-btn"><i class="fa fa-facebook"></i></a></li>
-                            <li><a href="#" class="social-btn"><i class="fa fa-twitter"></i></a></li>
-                            <li><a href="#" class="social-btn"><i class="fa fa-github"></i></a></li>
+                            <li><a href="https://www.facebook.com/mrkazansky" target="_blank" class="social-btn"><i class="fa fa-facebook"></i></a></li>
+                            <li><a href="#" target="_blank" class="social-btn"><i class="fa fa-twitter"></i></a></li>
+                            <li><a href="#" target="_blank" class="social-btn"><i class="fa fa-github"></i></a></li>
                           </ul>
                         </div>
                       </div>
@@ -251,9 +256,9 @@
                         <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nunc ultricies nulla non metus pulvinar imperdiet. Praesent non adipiscing libero.</p>
                         <div class="social">
                           <ul class="social-buttons">
-                            <li><a href="https://www.facebook.com/handsomevip007" class="social-btn"><i class="fa fa-facebook"></i></a></li>
-                            <li><a href="#" class="social-btn"><i class="fa fa-twitter"></i></a></li>
-                            <li><a href="#" class="social-btn"><i class="fa fa-github"></i></a></li>
+                            <li><a href="https://www.facebook.com/handsomevip007" target="_blank" class="social-btn"><i class="fa fa-facebook"></i></a></li>
+                            <li><a href="#" target="_blank" class="social-btn"><i class="fa fa-twitter"></i></a></li>
+                            <li><a href="#" target="_blank" class="social-btn"><i class="fa fa-github"></i></a></li>
                           </ul>
                         </div>
                       </div>
@@ -265,9 +270,9 @@
                             adipiscing libero.</p>
                           <div class="social">
                             <ul class="social-buttons">
-                              <li><a href="https://www.facebook.com/phamvinhtoan3010" class="social-btn"><i class="fa fa-facebook"></i></a></li>
-                              <li><a href="#" class="social-btn"><i class="fa fa-twitter"></i></a></li>
-                              <li><a href="#" class="social-btn"><i class="fa fa-github"></i></a></li>
+                              <li><a href="https://www.facebook.com/phamvinhtoan3010" target="_blank" class="social-btn"><i class="fa fa-facebook"></i></a></li>
+                              <li><a href="#" target="_blank" class="social-btn"><i class="fa fa-twitter"></i></a></li>
+                              <li><a href="#" target="_blank" class="social-btn"><i class="fa fa-github"></i></a></li>
                             </ul>
                           </div>
                         </div>
@@ -278,9 +283,9 @@
                             adipiscing libero.</p>
                           <div class="social">
                             <ul class="social-buttons">
-                              <li><a href="https://www.facebook.com/profile.php?id=100004432086600&fref=ts" class="social-btn"><i class="fa fa-facebook"></i></a></li>
-                              <li><a href="#" class="social-btn"><i class="fa fa-twitter"></i></a></li>
-                              <li><a href="#" class="social-btn"><i class="fa fa-github"></i></a></li>
+                              <li><a href="https://www.facebook.com/profile.php?id=100004432086600&fref=ts" target="_blank" class="social-btn"><i class="fa fa-facebook"></i></a></li>
+                              <li><a href="#" target="_blank" class="social-btn"><i class="fa fa-twitter"></i></a></li>
+                              <li><a href="#" target="_blank" class="social-btn"><i class="fa fa-github"></i></a></li>
                             </ul>
                           </div>
                         </div>
